Improve border-colour

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 .goodGreenButton {
     /*color: green;*/
     background-color:green;
-    border:2px solid lightgreen
+    border:2px solid darkgreen
 }
 .goodRedButton{
     background-color:red;
