--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 }
 @keyframes redcycle {
   0% {background-color: red;}
+  20%{background-color:salmon;}
   50% {background-color: darkred;}
   69% {background-color: crimson;}
   70% {background-color:darkred;}
@@ -46,9 +47,12 @@
   100% {background-color:red}
 }
 @keyframes redcycle2 {
-    0% {background-color:red;}
+    0% {background-color:red;transform:translateY(2px);}
+    20%{background-color:darksalmon;}
     50%{background-color:firebrick;}
     70%{background-color:crimson;}
+    75%{border-color:darksalmon;transform:translateY(2px);}
+    78%{border-color:crimson;transform:translateY(-1px);}
     80%{background-color:red;}
     99%{background-color:firebrick;}
 }
