--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
   100% {background-color:red}
 }
 @keyframes redcycle2 {
-    0% {background-color:red;transform:translateY(2px);}
+    1% {background-color:red;transform:translateY(2px);}
     20%{background-color:darksalmon;}
     50%{background-color:firebrick;}
     70%{background-color:crimson;}
     75%{border-color:darksalmon;transform:translateY(2px);}
-    78%{border-color:crimson;transform:translateY(-1px);}
+    78%{border-color:crimson;}
     80%{background-color:red;}
     99%{background-color:firebrick;}
 }
