--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <link rel="stylesheet" href="GoodCSS.css">
 <button class="goodButtonMain goodGreenButton">&#x2713;</button>
 <button class="goodButtonMain goodRedButton">&#x2718;</button>
+<div class="goodText">
+    Lorem ipsum <b>BOLD</b><i>blah</i><u><b>blah</u><i><u>blah</u></i></b>
+</div>
