--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <nav><button class="wideButtonBlue">hi</button></nav>
 <link rel="stylesheet" href="GoodCSS.css">
-<br><button class="goodButtonMain goodGreenButton">&#x2713;</button>
-<button class="goodButtonMain goodRedButton">&#x2718;</button>
+<br><button class="goodGreenButton">&#x2713;</button>
+<button class="goodRedButton">&#x2718;</button>
 <div class="goodText">
     Lorem ipsum <b>BOLD</b><i>blah</i><u><b>blah</u><i><u>blah</u></i></b>
 </div>
