--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body class="goodText">
 <nav><button class="wideButtonBlue">hi</button></nav>
 <link rel="stylesheet" href="GoodCSS.css">
-<br><button class="goodGreenButton">&#x2713;</button>
-<button class="goodRedButton">&#x2718;</button>
+<br><button class="goodGreenButton goodGreenButtonAnimations">&#x2713;</button>
+<button class="goodRedButton goodRedButtonAnimations">&#x2718;</button>
     Lorem ipsum <b>BOLD</b><i>blah</i><u><b>blah</u><i><u>blah</u></i></b>
 </body>
