--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 </head>
 <body class="goodText">
     <h1>This is a demo of goodCSS</h1>
-    <nav><button class="wideButtonBlue">hi</button></nav>
+    <nav><button class="wideButtonBlue" onclick="alert('Hi!');">hi</button><button class="wideButtonBlue" onclick='alert("Ill miss you...");'>bye</button></nav>
     <link rel="stylesheet" href="GoodCSS.css">
     <br><button class="goodGreenButton goodGreenButtonAnimations">&#x2713;</button>
     <button class="goodRedButton goodRedButtonAnimations">&#x2718;</button>
