--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
     <link rel="stylesheet" href="GoodCSS.css">
 </head>
 <body class="goodText">
-    <h1>This is a demo of goodCSS</h1>
-    <nav><button class="wideButtonBlue" onclick="alert('Hi!');">hi</button><button class="wideButtonBlue" onclick='alert("Ill miss you...");'>bye</button></nav>
+    <h1>This is a demo of goodCSS. NO JAVASCRIPT IS USED IN THIS SITE!</h1>
+    <nav><button class="wideButtonBlue">hi</button><button class="wideButtonBlue">bye</button></nav>
     <link rel="stylesheet" href="GoodCSS.css">
     <br><button class="goodGreenButton goodGreenButtonAnimations">&#x2713;</button>
     <button class="goodRedButton goodRedButtonAnimations">&#x2718;</button>
     <p>Lorem ipsum <b>BOLD</b><i>blah</i><u><b>blah</u><i><u>blah</u></i></b></p>
+    <button class="goodText goodGreenButton goodGreenButtonAnimations cont0"><div class="inCont"><br></div>Do NOT click me.<div class="inCont"><br><br>...</div></a></button>
 </body>
