--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <br><button class="goodGreenButton goodGreenButtonAnimations">&#x2713;</button>
     <button class="goodRedButton goodRedButtonAnimations">&#x2718;</button>
     <p>Lorem ipsum <b>BOLD</b><i>blah</i><u><b>blah</u><i><u>blah</u></i></b></p>
-    <button class="goodText goodGreenButton goodGreenButtonAnimations cont0"><div class="inCont"><br></div>Do NOT click me.<div class="inCont"><br><br>...</div></a></button>
+    <div id="cb1cover"></div>
+    <input type="checkbox" id="cb1" />
+    <button class="goodText goodGreenButton goodGreenButtonAnimations cont0"><label for="cb1">Do NOT click me.</button></label>
+        <p class="inCont">Gee, thanks.</p>
 </body>
