--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 </head>
 <body class="goodText">
     <h1>This is a demo of goodCSS. NO JAVASCRIPT IS USED IN THIS SITE!</h1>
-    <nav><button class="wideButtonBlue">hi</button><button class="wideButtonBlue">bye</button></nav>
+    <nav><button class="wideButtonBlue">hi</button><button class="wideButtonGrey">bye</button></nav>
     <link rel="stylesheet" href="GoodCSS.css">
     <br><button class="goodGreenButton goodGreenButtonAnimations">&#x2713;</button>
     <button class="goodRedButton goodRedButtonAnimations">&#x2718;</button>
+    <button class="goodBlueButton goodBlueButtonAnimations">?</button>
     <p>Lorem ipsum <b>BOLD</b><i>blah</i><u><b>blah</u><i><u>blah</u></i></b></p>
     <div id="cb1cover"></div>
     <input type="checkbox" id="cb1" />
